--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
   },
   "homepage": "https://github.com/hitchyjs/plugin-static#readme",
   "devDependencies": {
-    "eslint": "^5.8.0",
-    "eslint-config-cepharum": "^1.0.8",
-    "eslint-plugin-promise": "^4.0.1",
-    "hitchy-server-dev-tools": "0.0.4",
-    "mocha": "^5.2.0",
+    "eslint": "^6.5.0",
+    "eslint-config-cepharum": "^1.0.10",
+    "eslint-plugin-promise": "^4.2.1",
+    "hitchy-server-dev-tools": "^0.1.3",
+    "mocha": "^6.2.0",
     "should": "^13.2.3",
     "should-http": "^0.1.1"
+  },
+  "peerDependencies": {
+    "hitchy": "^0.4.0"
   }
 }
